--- a/Aula-1/index.html
+++ b/Aula-1/index.html
@@ -3,9 +3,11 @@
     <head>
         <title>Conceitos de JavaScript</title>
         <meta charset="UTF-8">
-        <script src='concepts.js'></script>
+        
     </head>
     <body>
-        
+        <h1>Scripts carregados ...</h1>
+        <!--<script src='concepts.js'></script>-->
+        <script src='classes-example.js'></script>
     </body>
 </html>
