--- a/Aula-7/helloangular/public/index.html
+++ b/Aula-7/helloangular/public/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
-
 <html ng-app="anguhello">
     <head>
         <title>Angular Hello, Participantes...</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js"></script>
     </head>
-    <body ng-controller="participanteController as ctl">
-        <h1>Participantes</h1>
-        <form ng-submit="ctl.salvarParticipante()">
-            <fieldset>
-                <legend>Novo Participante</legend>
-                <label>Nome</label>
-                <input type="text" ng-model="ctl.novo.nome_participante" required><br/>
-                <input type="submit"/>
-            </fieldset>
-        </form>
-        <ul>
-            <li ng-repeat="part in ctl.participantes">{{part.nome_participante}}</li>
-        </ul>
-
+    <body>
+        <a href="#/eventos">Eventos</a> | <a href="#/participantes">Participantes</a><br/>
+        <div ng-view></div>
+        
         <script type="text/javascript" src="modulo.js"></script>
         <script type="text/javascript" src="participante.controller.js"></script>
         <script type="text/javascript" src="participante.service.js"></script>
+        <script type="text/javascript" src="evento.controller.js"></script>
+        <script type="text/javascript" src="evento.service.js"></script>
     </body>
 </html>
