--- a/Aula-7/helloangular/public/index.html
+++ b/Aula-7/helloangular/public/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html ng-app="anguhello">
-    <head>
-        <title>Angular Hello, Participantes...</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js"></script>
-    </head>
-    <body>
-        <a href="#/eventos">Eventos</a> | <a href="#/participantes">Participantes</a><br/>
-        <div ng-view></div>
-        
-        <script type="text/javascript" src="modulo.js"></script>
-        <script type="text/javascript" src="participante.controller.js"></script>
-        <script type="text/javascript" src="participante.service.js"></script>
-        <script type="text/javascript" src="evento.controller.js"></script>
-        <script type="text/javascript" src="evento.service.js"></script>
-    </body>
+
+<head>
+    <title>Angular Hello, Participantes...</title>
+</head>
+
+<body>
+    <a href="#/eventos">Eventos</a> | <a href="#/participantes">Participantes</a><br/>
+    <div ng-view></div>
+
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js"></script>
+<script src="/scripts/chart.js/dist/chart.js"></script>
+<script src="/scripts/angular-chart.js/dist/angular-chart.js"></script>
+
+
+<script type="text/javascript" src="angular.module.js"></script>
+<script type="text/javascript" src="router.module.js"></script>
+<script type="text/javascript" src="participantes/participante.controller.js"></script>
+<script type="text/javascript" src="participantes/participante.service.js"></script>
+<script type="text/javascript" src="eventos/evento.controller.js"></script>
+<script type="text/javascript" src="eventos/evento.service.js"></script>
+
 </html>
